--- a/notebook/2019-02-08-somatic-calls-pileup/2019-02-08-somatic-calls-pileup.Rmd
+++ b/notebook/2019-02-08-somatic-calls-pileup/2019-02-08-somatic-calls-pileup.Rmd
@@ -36,4 +36,5 @@ barchart(tissue ~ refcount + altcount | variant, data = df, xlim = c(0, 1.1 * ce
 
 ```{r allele-counts-X-1355567-CT, fig.asp=1.2, fig.width=4}
 barchart(tissue ~ refcount + altcount, data = df, auto.key = list(text = c("reference allele", "alternative allele")), xlab = "read count", subset = variant == "X:1355567", main = "X:1,355,567 C/T", xlim = c(0, 1.1 * ceiling(max(df$depth))), stack = TRUE)
+barchart(tissue ~ refcount + altcount, data = df, auto.key = list(text = c("reference allele", "alternative allele")), xlab = "read count", subset = variant == "X:1355567", main = "X:1,355,567 C/T", xlim = c(0, 1.1 * ceiling(max(df$depth))), stack = TRUE, par.settings = list(superpose.polygon = list(col = c("gray", "red"))))
 ```
