--- a/notebook/2019-02-08-somatic-calls-pileup/2019-02-08-somatic-calls-pileup.Rmd
+++ b/notebook/2019-02-08-somatic-calls-pileup/2019-02-08-somatic-calls-pileup.Rmd
@@ -31,10 +31,11 @@ df$variant <- paste(df$chromosome, df$position, sep = ":")
 ```
 
 ```{r allele-counts, fig.asp=0.7}
-barchart(tissue ~ refcount + altcount | variant, data = df, xlim = c(0, 1.1 * ceiling(max(df$depth))), auto.key = list(text = c("reference allele", "alternative allele")), xlab = "read count", stack = TRUE)
+mylab <- rev(c("NeuN+", "NeuN-", "muscle"))
+barchart(tissue ~ refcount + altcount | variant, data = df, xlim = c(0, 1.1 * ceiling(max(df$depth))), auto.key = list(text = c("reference allele", "alternative allele")), xlab = "read count", stack = TRUE, scales = list(y = list(labels = mylab)))
 ```
 
 ```{r allele-counts-X-1355567-CT, fig.asp=1.2, fig.width=4}
-barchart(tissue ~ refcount + altcount, data = df, auto.key = list(text = c("reference allele", "alternative allele")), xlab = "read count", subset = variant == "X:1355567", main = "X:1,355,567 C/T", xlim = c(0, 1.1 * ceiling(max(df$depth))), stack = TRUE)
-barchart(tissue ~ refcount + altcount, data = df, auto.key = list(text = c("reference allele", "alternative allele")), xlab = "read count", subset = variant == "X:1355567", main = "X:1,355,567 C/T", xlim = c(0, 1.1 * ceiling(max(df$depth))), stack = TRUE, par.settings = list(superpose.polygon = list(col = c("gray", "red"))))
+barchart(tissue ~ refcount + altcount, data = df, auto.key = list(text = c("reference allele", "alternative allele")), xlab = "read count", subset = variant == "X:1355567", main = "X:1,355,567 C/T", xlim = c(0, 1.1 * ceiling(max(df$depth))), stack = TRUE, scales = list(y = list(labels = mylab)))
+barchart(tissue ~ refcount + altcount, data = df, auto.key = list(text = c("reference allele", "alternative allele")), xlab = "read count", subset = variant == "X:1355567", main = "X:1,355,567 C/T", xlim = c(0, 1.1 * ceiling(max(df$depth))), stack = TRUE, par.settings = list(superpose.polygon = list(col = c("gray", "red"))), scales = list(y = list(labels = mylab)))
 ```
