manually added ipynb -> md files to lab-notebook

--- a/notebook/2019-02-12-testfiles-to-synapse/2019-02-12-testfiles-to-synapse.ipynb
+++ b/notebook/2019-02-12-testfiles-to-synapse/2019-02-12-testfiles-to-synapse.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Small FASTQ files for testing the BSMN mapping workflow are uploaded to various locations in Synapse."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
