Notebook on submission

--- a/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
+++ b/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        "[3 rows x 236 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,13 +1401,13 @@
     "\n",
     "# brain a tissue bank manifest\n",
     "btb1 = btb_temp.loc[btb_temp[\"src_subject_id\"] == sel_subj_cmc, :]\n",
-    "cmc.write_manifest(btb1, template_path=\"/tmp/nichd_btb02_U01MH106891_Chess.csv\", target_path=\"nichd_btb02-\" + sel_subj_cmc + \".csv\")    \n",
+    "cmc.write_manifest(btb1, template_path=\"/tmp/nichd_btb02_U01MH106891_Chess.csv\", target_path=\"/tmp/nichd_btb02-\" + sel_subj_cmc + \".csv\")    \n",
     "btb1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
        "[1 rows x 34 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1511,7 @@
    "source": [
     "# genomic subjects manifest\n",
     "gsub1 = gsub_temp.loc[gsub_temp[\"src_subject_id\"] == sel_subj_cmc, :]\n",
-    "cmc.write_manifest(gsub1, template_path=\"/tmp/genomics_subject02_U01MH106891_Chess.csv\", target_path=\"genomics_subject02-\" + sel_subj_cmc + \".csv\")\n",
+    "cmc.write_manifest(gsub1, template_path=\"/tmp/genomics_subject02_U01MH106891_Chess.csv\", target_path=\"/tmp/genomics_subject02-\" + sel_subj_cmc + \".csv\")\n",
     "gsub1"
    ]
   },
