btb and genomics subject manifest automatically made for a sample

--- a/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
+++ b/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,12 +61,13 @@
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
-    "import cmc_submit2ndar as cmc"
+    "import cmc_submit2ndar as cmc\n",
+    "syn = synapseclient.login()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,16 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Manifest file path: /tmp/nichd_btb02_U01MH106891_Chess.csv\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -300,13 +304,13 @@
        "[5 rows x 236 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "btb_temp, btb_syn = cmc.get_manifest(\"syn12154562\")\n",
+    "btb_temp, btb_syn = cmc.get_manifest(\"syn12154562\", syn)\n",
     "btb_temp.head()"
    ]
   },
@@ -319,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +390,7 @@
        "4   CMC_MSSM_304  MSSM_304.TMPR_69091.mu1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,16 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Manifest file path: /tmp/genomics_subject02_U01MH106891_Chess.csv\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -625,13 +622,13 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gsub_temp, gsub_syn = cmc.get_manifest(\"syn12128754\")\n",
+    "gsub_temp, gsub_syn = cmc.get_manifest(\"syn12128754\", syn)\n",
     "gsub_temp.head()"
    ]
   },
@@ -646,17 +643,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Manifest file path: /tmp/genomics_sample03_template.csv\n",
-      "Manifest file path: /tmp/genomics_sample03_definitions.csv\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1168,14 +1157,14 @@
        "30                                                NaN      NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gsam_temp, gsam_syn = cmc.get_manifest(\"syn8464096\")\n",
-    "gsam_def, gsam_def_syn = cmc.get_manifest(\"syn7896813\", skiprows=0)\n",
+    "gsam_temp, gsam_syn = cmc.get_manifest(\"syn8464096\", syn)\n",
+    "gsam_def, gsam_def_syn = cmc.get_manifest(\"syn7896813\", syn, skiprows=0)\n",
     "gsam_def"
    ]
   },
@@ -1188,23 +1177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'gsam_template' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-2e4af135d51d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mshared_columns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgsam_template\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgsub\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgsam_template\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mshared_columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'gsam_template' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['subjectkey', 'src_subject_id', 'interview_age', 'interview_date',\n",
+       "       'sample_description', 'sample_id_original', 'biorepository',\n",
+       "       'patient_id_biorepository', 'sample_id_biorepository',\n",
+       "       'cell_id_original', 'cell_id_biorepository'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "shared_columns = gsam_template.loc[:, [y in gsub.columns for y in gsam_template.columns]].columns\n",
+    "shared_columns = gsam_temp.loc[:, [y in gsub_temp.columns for y in gsam_temp.columns]].columns\n",
     "shared_columns"
    ]
   },
@@ -1217,11 +1209,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns that are both required for and specific to the 'genomics samples' manifest\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ElementName</th>\n",
+       "      <th>DataType</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Required</th>\n",
+       "      <th>ElementDescription</th>\n",
+       "      <th>ValueRange</th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>Aliases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>experiment_id</td>\n",
+       "      <td>Integer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Required</td>\n",
+       "      <td>ID for the Experiment/settings/run</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>organism</td>\n",
+       "      <td>String</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>Required</td>\n",
+       "      <td>Organism</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>sample_amount</td>\n",
+       "      <td>Float</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Required</td>\n",
+       "      <td>Sample amount</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>sample_unit</td>\n",
+       "      <td>String</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>Required</td>\n",
+       "      <td>Measurement unit for Sample</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>data_file1_type</td>\n",
+       "      <td>String</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>Required</td>\n",
+       "      <td>type of data file</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>data_file1</td>\n",
+       "      <td>File</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Required</td>\n",
+       "      <td>Data file</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>storage_protocol</td>\n",
+       "      <td>String</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>Required</td>\n",
+       "      <td>Description of Storage Protocol</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>data_file_location</td>\n",
+       "      <td>String</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>Required</td>\n",
+       "      <td>dbGaP; NDAR; NIMH Genetics; AGRE; Sfari</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ElementName DataType   Size  Required  \\\n",
+       "1        experiment_id  Integer    NaN  Required   \n",
+       "7             organism   String   50.0  Required   \n",
+       "8        sample_amount    Float    NaN  Required   \n",
+       "9          sample_unit   String   50.0  Required   \n",
+       "11     data_file1_type   String  100.0  Required   \n",
+       "12          data_file1     File    NaN  Required   \n",
+       "19    storage_protocol   String  255.0  Required   \n",
+       "20  data_file_location   String   50.0  Required   \n",
+       "\n",
+       "                         ElementDescription ValueRange Notes  Aliases  \n",
+       "1        ID for the Experiment/settings/run        NaN   NaN      NaN  \n",
+       "7                                  Organism        NaN   NaN      NaN  \n",
+       "8                             Sample amount        NaN   NaN      NaN  \n",
+       "9               Measurement unit for Sample        NaN   NaN      NaN  \n",
+       "11                        type of data file        NaN   NaN      NaN  \n",
+       "12                                Data file        NaN   NaN      NaN  \n",
+       "19          Description of Storage Protocol        NaN   NaN      NaN  \n",
+       "20  dbGaP; NDAR; NIMH Genetics; AGRE; Sfari        NaN   NaN      NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gsam_specific_columns = gsam_template.loc[:, [y not in gsub.columns for y in gsam_template.columns]].columns\n",
+    "gsam_specific_columns = gsam_temp.loc[:, [y not in gsub_temp.columns for y in gsam_temp.columns]].columns\n",
     "gsam_required_columns = gsam_def.loc[gsam_def[\"Required\"] == \"Required\", \"ElementName\"]\n",
     "print(\"Columns that are both required for and specific to the 'genomics samples' manifest\")\n",
     "gsam_specific_required_columns = gsam_required_columns.loc[[y in gsam_specific_columns for y in gsam_required_columns]]\n",
@@ -1241,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1390,24 +1540,21 @@
        "[3 rows x 236 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sel_subj = \"MSSM_106\"\n",
-    "sel_subj_cmc = \"CMC_\" + sel_subj\n",
-    "\n",
-    "# brain a tissue bank manifest\n",
-    "btb1 = btb_temp.loc[btb_temp[\"src_subject_id\"] == sel_subj_cmc, :]\n",
-    "cmc.write_manifest(btb1, template_path=\"/tmp/nichd_btb02_U01MH106891_Chess.csv\", target_path=\"/tmp/nichd_btb02-\" + sel_subj_cmc + \".csv\")    \n",
-    "btb1"
+    "target_dir = \"/projects/bsm/attila/results/2019-02-19-upload-to-ndar\"\n",
+    "btb, gsubj = cmc.make_manifests(sel_subj, syn, target_dir=target_dir)\n",
+    "btb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1503,16 +1650,13 @@
        "[1 rows x 34 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# genomic subjects manifest\n",
-    "gsub1 = gsub_temp.loc[gsub_temp[\"src_subject_id\"] == sel_subj_cmc, :]\n",
-    "cmc.write_manifest(gsub1, template_path=\"/tmp/genomics_subject02_U01MH106891_Chess.csv\", target_path=\"/tmp/genomics_subject02-\" + sel_subj_cmc + \".csv\")\n",
-    "gsub1"
+    "gsubj"
    ]
   },
   {
