--- a/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
+++ b/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +304,7 @@
        "[5 rows x 236 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +390,7 @@
        "4   CMC_MSSM_304  MSSM_304.TMPR_69091.mu1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +622,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1157,7 @@
        "30                                                NaN      NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1190,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1365,7 @@
        "20  dbGaP; NDAR; NIMH Genetics; AGRE; Sfari        NaN   NaN      NaN  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1540,7 @@
        "[3 rows x 236 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1548,7 @@
    "source": [
     "sel_subj = \"MSSM_106\"\n",
     "target_dir = \"/projects/bsm/attila/results/2019-02-19-upload-to-ndar\"\n",
-    "btb, gsubj = cmc.make_manifests(sel_subj, syn, target_dir=target_dir)\n",
+    "btb, gsubj, gsam = cmc.make_manifests(sel_subj, syn, target_dir=target_dir)\n",
     "btb"
    ]
   },
@@ -1666,6 +1657,113 @@
    ],
    "source": [
     "gsubj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subjectkey</th>\n",
+       "      <th>experiment_id</th>\n",
+       "      <th>src_subject_id</th>\n",
+       "      <th>interview_age</th>\n",
+       "      <th>interview_date</th>\n",
+       "      <th>sample_description</th>\n",
+       "      <th>sample_id_original</th>\n",
+       "      <th>organism</th>\n",
+       "      <th>sample_amount</th>\n",
+       "      <th>sample_unit</th>\n",
+       "      <th>...</th>\n",
+       "      <th>patient_id_biorepository</th>\n",
+       "      <th>sample_id_biorepository</th>\n",
+       "      <th>cell_id_original</th>\n",
+       "      <th>cell_id_biorepository</th>\n",
+       "      <th>comments_misc</th>\n",
+       "      <th>site</th>\n",
+       "      <th>rat280</th>\n",
+       "      <th>rat230</th>\n",
+       "      <th>gqn</th>\n",
+       "      <th>seq_batch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NDAR_INV3F2A6YAC</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>CMC_MSSM_106</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>4/13/18</td>\n",
+       "      <td>PFC</td>\n",
+       "      <td>MSSM_106.DLPFC_1399.np1</td>\n",
+       "      <td>human</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>CMC_MSSM_106</td>\n",
+       "      <td>MSSM_DNA_TMPR_69087</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 32 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         subjectkey  experiment_id src_subject_id interview_age  \\\n",
+       "0  NDAR_INV3F2A6YAC           1111   CMC_MSSM_106          1080   \n",
+       "\n",
+       "  interview_date sample_description       sample_id_original organism  \\\n",
+       "0        4/13/18                PFC  MSSM_106.DLPFC_1399.np1    human   \n",
+       "\n",
+       "   sample_amount sample_unit  ... patient_id_biorepository  \\\n",
+       "0              1          NA  ...             CMC_MSSM_106   \n",
+       "\n",
+       "  sample_id_biorepository cell_id_original cell_id_biorepository  \\\n",
+       "0     MSSM_DNA_TMPR_69087              NaN                   NaN   \n",
+       "\n",
+       "  comments_misc site rat280 rat230  gqn seq_batch  \n",
+       "0           NaN  NaN    NaN    NaN  NaN       NaN  \n",
+       "\n",
+       "[1 rows x 32 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gsam"
    ]
   },
   {
